testdata/baselines/reference/submodule/conformance/varRequireFromTypescript.errors.txt
use.js(10,12): error TS8010: Type annotations can only be used in TypeScript files.
use.js(11,12): error TS8010: Type annotations can only be used in TypeScript files.


==== use.js (2 errors) ====
    var ex = require('./ex')
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Greatest} greatest
               ~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {ex.Crunch} wrap
               ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(greatest, wrap) {
        greatest.day
        wrap.n
    }
    
==== ex.d.ts (0 errors) ====
    export type Greatest = { day: 1 }
    export class Crunch {
        n: number
        m(): number
        constructor(n: number)
    }
    